# sample-dangling-dns-detection

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
infrastructure/: template.yaml
scripts/: package.sh
src/: __init__.py  alerting.py  discovery.py  evaluator.py  handler.py  inventory.py  metrics.py  models.py  pattern_matcher.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_alerting_integration.py  test_discovery_integration.py  test_inventory_integration.py  test_metrics_integration.py
tests/property/: __init__.py  test_handler_props.py  test_inventory_props.py  test_metrics_props.py  test_models_props.py  test_pattern_matcher_props.py
tests/unit/: __init__.py  test_alerting.py  test_discovery.py  test_evaluator.py  test_handler.py  test_inventory.py  test_metrics.py  test_models.py  test_pattern_matcher.py
