[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dangling-dns-detection"
version = "0.1.0"
description = "AWS Config custom rule for detecting dangling CNAME records that could lead to subdomain takeover attacks"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT-0"}
authors = [
    {name = "AnyCompany"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

dependencies = [
    "boto3>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.82.0",
    "moto>=4.2.0",
    "mypy>=1.5.0",
    "boto3-stubs[route53,config,securityhub,sns,cloudwatch]>=1.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "property: Property-based tests using hypothesis",
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
